--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
+		"start": "node torch-rnn/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brent Bailey",
